--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/Lost_Pets?serverTimezone=Israel&createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=lostpetdb
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+server.port=5000
+spring.http.encoding.charset=UTF-8
 
+#server.port=5000 
+#spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME}:${RDS_PORT}/${RDS_DB_NAME} 
+#spring.datasource.username=${RDS_USERNAME}
+#spring.datasource.password=${RDS_PASSWORD}
+#spring.jpa.hibernate.ddl-auto=create
